# hole

./: CHANGELOG.md  README.md  SETUP.md  pyproject.toml
examples/modeling/inference/: layer_flow_example.py
hole/: __init__.py  visualizer.py
hole/visualization/: __init__.py  cluster_flow.py  heatmap_dendrograms.py  layer_flow.py  persistence_vis.py  scatter_hull.py
tests/: test_cluster_flow_thresholds.py  test_layer_flow.py
