[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# PEP 621 metadata (converted from Poetry so `uv` can manage the project
# natively: `uv venv && uv pip install -e '.[projections,dev]'`, or `uv sync`).
[project]
name = "hole"
version = "0.1.0"
description = "HOLE: Homological Observation of Latent Embeddings - topological analysis and visualization of deep learning representations"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [
    { name = "Sudhanva Manjunath Athreya", email = "sud.athreya@utah.edu" },
    { name = "Paul Rosen", email = "paul.rosen@utah.edu" },
]
keywords = ["topology", "ixai", "visualization", "deep-learning", "persistent-homology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.0.0",
    "gudhi>=3.5.0",
    "networkx>=2.6.0",
    "tqdm>=4.60.0",
    "pillow>=9.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# Extra projection backends for plot_dimensionality_reduction (PHATE recommended
# for latent-space work). PCA/MDS/t-SNE need nothing beyond scikit-learn.
projections = ["umap-learn>=0.5.0", "phate>=1.0.0", "openTSNE>=0.6.0"]
# Model-activation hooks (extracting hidden states from transformers/vision models)
hooks = [
    "torch>=2.0.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "timm>=1.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Repository = "https://github.com/brezgis/hole"

[tool.setuptools.packages.find]
include = ["hole*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
